src/bindings_windows_x86.rs

    ["Offset of field: ft_program_data::DSlowSlew"]
        [::std::mem::offset_of!(ft_program_data, DSlowSlew) - 121usize];
    ["Offset of field: ft_program_data::DSchmittInput"]
        [::std::mem::offset_of!(ft_program_data, DSchmittInput) - 122usize];
    ["Offset of field: ft_program_data::DDriveCurrent"]
        [::std::mem::offset_of!(ft_program_data, DDriveCurrent) - 123usize];
    ["Offset of field: ft_program_data::ARIIsTXDEN"]
        [::std::mem::offset_of!(ft_program_data, ARIIsTXDEN) - 124usize];
    ["Offset of field: ft_program_data::BRIIsTXDEN"]
        [::std::mem::offset_of!(ft_program_data, BRIIsTXDEN) - 125usize];
    ["Offset of field: ft_program_data::CRIIsTXDEN"]
        [::std::mem::offset_of!(ft_program_data, CRIIsTXDEN) - 126usize];
    ["Offset of field: ft_program_data::DRIIsTXDEN"]
        [::std::mem::offset_of!(ft_program_data, DRIIsTXDEN) - 127usize];
    ["Offset of field: ft_program_data::AIsVCP8"]
        [::std::mem::offset_of!(ft_program_data, AIsVCP8) - 128usize];
    ["Offset of field: ft_program_data::BIsVCP8"]
        [::std::mem::offset_of!(ft_program_data, BIsVCP8) - 129usize];
    ["Offset of field: ft_program_data::CIsVCP8"]
        [::std::mem::offset_of!(ft_program_data, CIsVCP8) - 130usize];
    ["Offset of field: ft_program_data::DIsVCP8"]
        [::std::mem::offset_of!(ft_program_data, DIsVCP8) - 131usize];
    ["Offset of field: ft_program_data::PullDownEnableH"]
        [::std::mem::offset_of!(ft_program_data, PullDownEnableH) - 132usize];
    ["Offset of field: ft_program_data::SerNumEnableH"]
        [::std::mem::offset_of!(ft_program_data, SerNumEnableH) - 133usize];
    ["Offset of field: ft_program_data::ACSlowSlewH"]
        [::std::mem::offset_of!(ft_program_data, ACSlowSlewH) - 134usize];
    ["Offset of field: ft_program_data::ACSchmittInputH"]
        [::std::mem::offset_of!(ft_program_data, ACSchmittInputH) - 135usize];
    ["Offset of field: ft_program_data::ACDriveCurrentH"]
        [::std::mem::offset_of!(ft_program_data, ACDriveCurrentH) - 136usize];
    ["Offset of field: ft_program_data::ADSlowSlewH"]
        [::std::mem::offset_of!(ft_program_data, ADSlowSlewH) - 137usize];
    ["Offset of field: ft_program_data::ADSchmittInputH"]
        [::std::mem::offset_of!(ft_program_data, ADSchmittInputH) - 138usize];
    ["Offset of field: ft_program_data::ADDriveCurrentH"]
        [::std::mem::offset_of!(ft_program_data, ADDriveCurrentH) - 139usize];
    ["Offset of field: ft_program_data::Cbus0H"]
        [::std::mem::offset_of!(ft_program_data, Cbus0H) - 140usize];
    ["Offset of field: ft_program_data::Cbus1H"]
        [::std::mem::offset_of!(ft_program_data, Cbus1H) - 141usize];
    ["Offset of field: ft_program_data::Cbus2H"]
        [::std::mem::offset_of!(ft_program_data, Cbus2H) - 142usize];
    ["Offset of field: ft_program_data::Cbus3H"]
        [::std::mem::offset_of!(ft_program_data, Cbus3H) - 143usize];
    ["Offset of field: ft_program_data::Cbus4H"]
        [::std::mem::offset_of!(ft_program_data, Cbus4H) - 144usize];
    ["Offset of field: ft_program_data::Cbus5H"]
        [::std::mem::offset_of!(ft_program_data, Cbus5H) - 145usize];
    ["Offset of field: ft_program_data::Cbus6H"]
        [::std::mem::offset_of!(ft_program_data, Cbus6H) - 146usize];
    ["Offset of field: ft_program_data::Cbus7H"]
        [::std::mem::offset_of!(ft_program_data, Cbus7H) - 147usize];
    ["Offset of field: ft_program_data::Cbus8H"]
        [::std::mem::offset_of!(ft_program_data, Cbus8H) - 148usize];
    ["Offset of field: ft_program_data::Cbus9H"]
        [::std::mem::offset_of!(ft_program_data, Cbus9H) - 149usize];
    ["Offset of field: ft_program_data::IsFifoH"]
        [::std::mem::offset_of!(ft_program_data, IsFifoH) - 150usize];
    ["Offset of field: ft_program_data::IsFifoTarH"]
        [::std::mem::offset_of!(ft_program_data, IsFifoTarH) - 151usize];
    ["Offset of field: ft_program_data::IsFastSerH"]
        [::std::mem::offset_of!(ft_program_data, IsFastSerH) - 152usize];
    ["Offset of field: ft_program_data::IsFT1248H"]
        [::std::mem::offset_of!(ft_program_data, IsFT1248H) - 153usize];
    ["Offset of field: ft_program_data::FT1248CpolH"]
        [::std::mem::offset_of!(ft_program_data, FT1248CpolH) - 154usize];
    ["Offset of field: ft_program_data::FT1248LsbH"]
        [::std::mem::offset_of!(ft_program_data, FT1248LsbH) - 155usize];
    ["Offset of field: ft_program_data::FT1248FlowControlH"]
        [::std::mem::offset_of!(ft_program_data, FT1248FlowControlH) - 156usize];
    ["Offset of field: ft_program_data::IsVCPH"]
        [::std::mem::offset_of!(ft_program_data, IsVCPH) - 157usize];
    ["Offset of field: ft_program_data::PowerSaveEnableH"]
        [::std::mem::offset_of!(ft_program_data, PowerSaveEnableH) - 158usize];
};
impl Default for ft_program_data {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
pub type FT_PROGRAM_DATA = ft_program_data;
pub type PFT_PROGRAM_DATA = *mut ft_program_data;
unsafe extern "stdcall" {
    pub fn FT_EE_Program(ftHandle: FT_HANDLE, pData: PFT_PROGRAM_DATA) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_EE_ProgramEx(
        ftHandle: FT_HANDLE,
        pData: PFT_PROGRAM_DATA,
        Manufacturer: *mut ::std::os::raw::c_char,
        ManufacturerId: *mut ::std::os::raw::c_char,
        Description: *mut ::std::os::raw::c_char,
        SerialNumber: *mut ::std::os::raw::c_char,
    ) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_EE_Read(ftHandle: FT_HANDLE, pData: PFT_PROGRAM_DATA) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_EE_ReadEx(
        ftHandle: FT_HANDLE,
        pData: PFT_PROGRAM_DATA,
        Manufacturer: *mut ::std::os::raw::c_char,
        ManufacturerId: *mut ::std::os::raw::c_char,
        Description: *mut ::std::os::raw::c_char,
        SerialNumber: *mut ::std::os::raw::c_char,
    ) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_EE_UASize(ftHandle: FT_HANDLE, lpdwSize: LPDWORD) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_EE_UAWrite(ftHandle: FT_HANDLE, pucData: PUCHAR, dwDataLen: DWORD) -> FT_STATUS;
}
unsafe extern "stdcall" {
    pub fn FT_EE_UARead(
        ftHandle: FT_HANDLE,
        pucData: PUCHAR,
        dwDataLen: DWORD,
        lpdwBytesRead: LPDWORD,
    ) -> FT_STATUS;
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct ft_eeprom_header {
    pub deviceType: FT_DEVICE,
    pub VendorId: WORD,
    pub ProductId: WORD,
    pub SerNumEnable: UCHAR,
    pub MaxPower: WORD,
    pub SelfPowered: UCHAR,
    pub RemoteWakeup: UCHAR,
    pub PullDownEnable: UCHAR,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ft_eeprom_header"][::std::mem::size_of::<ft_eeprom_header>() - 16usize];
    ["Alignment of ft_eeprom_header"][::std::mem::align_of::<ft_eeprom_header>() - 4usize];
    ["Offset of field: ft_eeprom_header::deviceType"]
        [::std::mem::offset_of!(ft_eeprom_header, deviceType) - 0usize];
    ["Offset of field: ft_eeprom_header::VendorId"]
        [::std::mem::offset_of!(ft_eeprom_header, VendorId) - 4usize];
    ["Offset of field: ft_eeprom_header::ProductId"]
        [::std::mem::offset_of!(ft_eeprom_header, ProductId) - 6usize];
    ["Offset of field: ft_eeprom_header::SerNumEnable"]
        [::std::mem::offset_of!(ft_eeprom_header, SerNumEnable) - 8usize];
    ["Offset of field: ft_eeprom_header::MaxPower"]
        [::std::mem::offset_of!(ft_eeprom_header, MaxPower) - 10usize];
    ["Offset of field: ft_eeprom_header::SelfPowered"]
        [::std::mem::offset_of!(ft_eeprom_header, SelfPowered) - 12usize];
    ["Offset of field: ft_eeprom_header::RemoteWakeup"]
        [::std::mem::offset_of!(ft_eeprom_header, RemoteWakeup) - 13usize];
    ["Offset of field: ft_eeprom_header::PullDownEnable"]
        [::std::mem::offset_of!(ft_eeprom_header, PullDownEnable) - 14usize];
};
pub type FT_EEPROM_HEADER = ft_eeprom_header;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct ft_eeprom_232b {
    pub common: FT_EEPROM_HEADER,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ft_eeprom_232b"][::std::mem::size_of::<ft_eeprom_232b>() - 16usize];
    ["Alignment of ft_eeprom_232b"][::std::mem::align_of::<ft_eeprom_232b>() - 4usize];
    ["Offset of field: ft_eeprom_232b::common"]
        [::std::mem::offset_of!(ft_eeprom_232b, common) - 0usize];
};
pub type FT_EEPROM_232B = ft_eeprom_232b;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct ft_eeprom_2232 {
    pub common: FT_EEPROM_HEADER,
    pub AIsHighCurrent: UCHAR,
    pub BIsHighCurrent: UCHAR,
    pub AIsFifo: UCHAR,
    pub AIsFifoTar: UCHAR,
    pub AIsFastSer: UCHAR,
    pub BIsFifo: UCHAR,
    pub BIsFifoTar: UCHAR,
    pub BIsFastSer: UCHAR,
    pub ADriverType: UCHAR,
    pub BDriverType: UCHAR,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of ft_eeprom_2232"][::std::mem::size_of::<ft_eeprom_2232>() - 28usize];
    ["Alignment of ft_eeprom_2232"][::std::mem::align_of::<ft_eeprom_2232>() - 4usize];
    ["Offset of field: ft_eeprom_2232::common"]
        [::std::mem::offset_of!(ft_eeprom_2232, common) - 0usize];
    ["Offset of field: ft_eeprom_2232::AIsHighCurrent"]
        [::std::mem::offset_of!(ft_eeprom_2232, AIsHighCurrent) - 16usize];
    ["Offset of field: ft_eeprom_2232::BIsHighCurrent"]
        [::std::mem::offset_of!(ft_eeprom_2232, BIsHighCurrent) - 17usize];
    ["Offset of field: ft_eeprom_2232::AIsFifo"]
        [::std::mem::offset_of!(ft_eeprom_2232, AIsFifo) - 18usize];
    ["Offset of field: ft_eeprom_2232::AIsFifoTar"]
        [::std::mem::offset_of!(ft_eeprom_2232, AIsFifoTar) - 19usize];
    ["Offset of field: ft_eeprom_2232::AIsFastSer"]
        [::std::mem::offset_of!(ft_eeprom_2232, AIsFastSer) - 20usize];
    ["Offset of field: ft_eeprom_2232::BIsFifo"]
        [::std::mem::offset_of!(ft_eeprom_2232, BIsFifo) - 21usize];
    ["Offset of field: ft_eeprom_2232::BIsFifoTar"]
        [::std::mem::offset_of!(ft_eeprom_2232, BIsFifoTar) - 22usize];
    ["Offset of field: ft_eeprom_2232::BIsFastSer"]
        [::std::mem::offset_of!(ft_eeprom_2232, BIsFastSer) - 23usize];
    ["Offset of field: ft_eeprom_2232::ADriverType"]
        [::std::mem::offset_of!(ft_eeprom_2232, ADriverType) - 24usize];
    ["Offset of field: ft_eeprom_2232::BDriverType"]
        [::std::mem::offset_of!(ft_eeprom_2232, BDriverType) - 25usize];
};
pub type FT_EEPROM_2232 = ft_eeprom_2232;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone)]
pub struct ft_eeprom_232r {
    pub common: FT_EEPROM_HEADER,
    pub IsHighCurrent: UCHAR,
    pub UseExtOsc: UCHAR,
    pub InvertTXD: UCHAR,
    pub InvertRXD: UCHAR,
    pub InvertRTS: UCHAR,
    pub InvertCTS: UCHAR,
    pub InvertDTR: UCHAR,
    pub InvertDSR: UCHAR,
    pub InvertDCD: UCHAR,
    pub InvertRI: UCHAR,
    pub Cbus0: UCHAR,
    pub Cbus1: UCHAR,
    pub Cbus2: UCHAR,
    pub Cbus3: UCHAR,
    pub Cbus4: UCHAR,
    pub DriverType: UCHAR,
}
